# hungry-distance

./: .fastconventional.yaml  .mergify.yml  .versio.yaml  Cargo.toml  Makefile  README.md  cliff.toml
.github/workflows/: build-releases.yml  pipeline.yml  test-and-tag.yml  update-tap.yml
homebrew/: formula.rb.j2
src/: cli.rs  main.rs
