[package]
name = "distance"
version = "0.1.0"
authors = ["Billie Thompson <billie@billiecodes.com>"]
edition = "2018"
description = "Calculate the distance between two points in 3rd space"
license = "Creative Commons Zero v1.0 Universal"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"